--- a/Frontend/src/style.css
+++ b/Frontend/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 html, body {
   width: 100%;
   height: 100%;
@@ -5,5 +7,12 @@ html, body {
   top: 0;
   left: 0;
   background-color: #101011;
+  font-family: 'Montserrat', sans-serif;
   overflow: hidden;
+  box-sizing: border-box;
+  padding: 5vw;
+}
+
+:root {
+  --main-element-bg: rgba(255, 255, 255, 0.05);
 }
